tests/spec/libsass_closed_issues/issue_1169/error/mod.rs
//! Tests auto-converted from "sass-spec/spec/libsass-closed-issues/issue_1169/error"

#[allow(unused)]
use super::runner;

mod color;

mod functioncall;

mod interpolate;

mod simple;
